--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -378,7 +378,6 @@ body {
   display: inline-block;
   margin-bottom: 10px;
 }
-
 .section-link::after {
   content: "";
   height: 12px;
@@ -392,11 +391,9 @@ body {
   right: 0;
   margin-top: -6px;
 }
-
 .section-link:hover {
   color: #F0145A;
 }
-
 .section-link:hover::after {
   background-image: url("../images/services/arrow-services-on-hover.png");
 }
@@ -421,7 +418,6 @@ body {
   text-decoration: none;
   white-space: nowrap;
 }
-
 .tel-header {
   color: #FFFFFF;
 }
@@ -440,11 +436,9 @@ body {
   position: relative;
   border-radius: 0 0 12px 12px;
 }
-
 .services-page {
   padding-top: 40px;
 }
-
 .services::before {
   content: " ";
   height: 10px;
@@ -455,7 +449,6 @@ body {
   top: 100%;
   left: 20px;
 }
-
 .services::after {
   content: " ";
   height: 10px;
@@ -788,7 +781,6 @@ body {
   background-color: #FFFFFF;
   margin-bottom: 30px;
 }
-
 .article:hover .article-title {
   color: #F0145A;
 }
@@ -878,7 +870,6 @@ body {
   flex-wrap: nowrap;
   overflow: auto;
 }
-
 .offers-list::-webkit-scrollbar {
   display: none;
 }
@@ -896,19 +887,16 @@ body {
   margin-left: 30px;
   cursor: pointer;
 }
-
 .offer-active {
   background: linear-gradient(90.13deg, #EF8080 0.84%, #F0145A 99.96%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 .offer-active:hover {
   background: #F0145A;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 .offer:hover {
   color: #F0145A;
 }
@@ -1072,7 +1060,6 @@ body {
 .social-media svg {
   display: block;
 }
-
 .social-media svg:hover * {
   fill: #F0145A;
 }
@@ -1084,7 +1071,6 @@ body {
   color: #24A3FF;
   text-decoration: none;
 }
-
 .mail:hover {
   color: #F0145A;
 }
@@ -1093,7 +1079,6 @@ body {
   display: flex;
   position: relative;
 }
-
 .copyright > p {
   margin-top: 0;
   margin-bottom: 0;
@@ -1197,7 +1182,6 @@ body {
   transform: translate(-50%, -50%);
   box-shadow: 0 15px 80px rgba(40, 40, 86, 0.5);
 }
-
 .service-modal .section-title {
   margin-bottom: 0;
   width: calc(100% - 42px);
@@ -1221,7 +1205,6 @@ body {
   padding-right: 0;
   cursor: pointer;
 }
-
 .close-button:hover {
   background-color: #E6E6F0;
 }
@@ -1239,13 +1222,11 @@ body {
   border: 1px solid #FFFFFF;
   border-radius: 8px;
 }
-
 .personal-info::placeholder {
   font-size: 16px;
   line-height: 26px;
   color: #B3B3BA;
 }
-
 .personal-info:focus {
   outline: none;
   border: 1px solid #24A3FF;
@@ -1276,7 +1257,6 @@ body {
   border-radius: 12px;
   cursor: pointer;
 }
-
 .send-form:hover {
   background-color: #0085FF;
 }
@@ -1319,7 +1299,6 @@ body {
   text-transform: uppercase;
   padding: 5px 7px;
 }
-
 .language-active {
   background: #F0145A;
   border-radius: 8px;
@@ -1353,11 +1332,9 @@ body {
 .scroll-button {
   text-decoration: none;
 }
-
 .scroll-button svg {
   display: block;
 }
-
 .scroll-button:hover * {
   stroke: #F0145A;
 }
@@ -1417,11 +1394,9 @@ body {
   background-color: #F5F5FA;
   border-radius: 12px;
 }
-
 .nav-link:hover {
   background-color: #E6E6F0;
 }
-
 .nav-link-active {
   color: #F0145A;
 }
@@ -1470,7 +1445,6 @@ body {
   margin-right: 4px;
   position: relative;
 }
-
 .logo-link-mobile:after {
   content: "";
   width: 12px;
@@ -1493,11 +1467,9 @@ body {
   display: flex;
   align-items: center;
 }
-
 .nav-menu-button:hover {
   background: #E6E6F0;
 }
-
 .nav-menu-button:hover * {
   stroke: #323264;
 }
@@ -1537,7 +1509,6 @@ body {
 .street-header {
   color: #B3B3BA;
 }
-
 .street-header::after {
   display: none;
 }
@@ -1546,7 +1517,6 @@ body {
   padding-left: 18px;
   position: relative;
 }
-
 .header-address-item::before {
   content: "";
   width: 6px;
@@ -1576,15 +1546,12 @@ body {
   display: block;
   border-bottom: 2px solid transparent;
 }
-
 .header-nav-link:hover {
   border-bottom: 2px solid #FFFFFF;
 }
-
 .navigation .header-nav-link.nav-link-active {
   color: #F0145A;
 }
-
 .navigation .header-nav-link.nav-link-active:hover {
   border-bottom: 2px solid #F0145A;
 }
@@ -1594,7 +1561,6 @@ body {
   margin-right: 4px;
   position: relative;
 }
-
 .logo-link-desktop:after {
   content: "";
   width: 21px;
@@ -1659,15 +1625,12 @@ body {
   padding-bottom: 30px;
   border-bottom: 4px solid rgba(255, 255, 255, 0.5);
 }
-
 .single-service .service-icon {
   margin-bottom: 0;
 }
-
 .single-service .section-title {
   margin-bottom: 0;
 }
-
 .single-service .single-service-description {
   margin-top: 0;
   margin-bottom: 0;
@@ -1730,7 +1693,6 @@ body {
   color: #FFFFFF;
   padding-left: 14px;
 }
-
 .sub-service-description:after {
   content: "";
   height: 6px;
@@ -1770,39 +1732,30 @@ body {
 .head-light-mode .header-top {
   background-color: #F5F5FA;
 }
-
 .head-light-mode .language:not(.language-active) {
   color: #B3B3BA;
 }
-
 .head-light-mode .tel-header {
   color: #B3B3BA;
 }
-
 .head-light-mode .header-bottom {
   padding-bottom: 10px;
 }
-
 .head-light-mode .current-page {
   color: #323264;
 }
-
 .head-light-mode .header-address-item::before {
   background-color: #E6E6F0;
 }
-
 .head-light-mode .header-address-item * {
   fill: #B3B3BA;
 }
-
 .head-light-mode .header-nav-link {
   color: #24A3FF;
 }
-
 .head-light-mode .header-nav-link:hover {
   border-bottom: 2px solid #24A3FF;
 }
-
 .head-light-mode .street-header {
   color: #B3B3BA;
 }
@@ -1837,7 +1790,6 @@ body {
   display: block;
   padding: 10px 30px;
 }
-
 .switcher:hover:not(.current-position) {
   border-radius: 10px;
   background-color: #F5F5FA;
@@ -1945,11 +1897,9 @@ body {
   color: #000000;
   margin-bottom: 15px;
 }
-
 .paragraph li:last-child {
   margin-bottom: 0;
 }
-
 .paragraph li::marker {
   font-weight: 700;
   font-size: 18px;
@@ -1996,7 +1946,6 @@ body {
   display: flex;
   align-items: center;
 }
-
 .follow-us-social:hover {
   background-color: #EDEDF7;
 }
@@ -2136,6 +2085,115 @@ body {
     margin-right: auto;
   }
 }
-/*# sourceMappingURL=style.css.map */
+.squad-section {
+  padding-top: 30px;
+  padding-bottom: 60px;
+}
+
+.team-member {
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.team-member:last-child {
+  margin-bottom: 0;
+}
+
+.team-member-picture {
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 12px;
+  margin-bottom: 15px;
+}
+
+.alexandrovskiy {
+  background-image: url("../images/squad/oleksandr-oleksandrovskiy.png");
+}
+
+.patrikov {
+  background-image: url("../images/squad/evgeniy-patrikov.png");
+}
+
+.melnik {
+  background-image: url("../images/squad/vlad-melnik.png");
+}
+
+.binn {
+  background-image: url("../images/squad/sergey-binn.png");
+}
+
+.kobzar {
+  background-image: url("../images/squad/oksana-kobzar.png");
+}
+
+.wolk {
+  background-image: url("../images/squad/julia-wolk.png");
+}
+
+.member-name {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #323264;
+}
+
+.member-position {
+  font-size: 14px;
+  line-height: 22px;
+  color: #B3B3BA;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.team-member-page {
+  position: absolute;
+  top: 315px;
+  right: 0;
+}
+.team-member-page:hover * {
+  fill: #EDEDF7;
+}
+.team-member-page:hover path {
+  stroke: #F0145A;
+}
+
+@media (min-width: 768px) {
+  .squad-section {
+    padding-top: 0;
+  }
+  .team-members {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .team-member-picture {
+    height: 400px;
+  }
+  .team-member {
+    width: calc(50% - 30px);
+  }
+  .team-member:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+  .team-member-page {
+    top: 415px;
+  }
+}
+@media (min-width: 1024px) {
+  .team-member {
+    width: calc(33.33% - 40px);
+  }
+  .team-member:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+  .wrap-team {
+    padding-right: 120px;
+    padding-left: 120px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
