Add about us page

--- a/assets/sass/_service.scss
+++ b/assets/sass/_service.scss
@@ -44,6 +44,10 @@
   color: #FFFFFF;
   text-decoration: none;
   cursor: pointer;
+
+  &:hover {
+    background-color: #0085FF;
+  }
 }
 
 .sub-service-area {
